static/css/honey.css
#honey_title {
  margin-top: 20px;
  margin-bottom: 20px;
  margin-right: 10px;
  position: relative;
  float:left;
  margin-left: 3%;
}

#honey_image {
  padding-top: 10px;
}

#positioning_wrapper {
  position: relative;
}

#content_wrapper {
  display: table;
  border-collapse: collapse;
  width: 90%;
  margin-left: 2%;
  position: relative;
}

#content {
  display: table-row;
}

#board, #right_panel {
  display: table-cell;
  vertical-align: top;
}

#board {
  background-color: #FFFFFF;
  border: none;
  /* image width is 550px */
  width: 600px;
}

#right_panel {
}

#branches {
  border: 1px solid;
  min-height: 50px;
  margin-top:10px;
  margin-right:10px;
  padding: 5px;
}

#help {
  border: 1px solid;
  margin: 10px;
  padding:10px;
  margin-left: 20%;
  margin-right: 20%;
}

#help h1 {
  font-size:16px;
}

#help h2 {
  font-size:14px;
}


#footbar {
  bottom: 0px;
  margin-top: 30px;
  text-align: center;
}

#footbar a {
  text-decoration: none;
  font-size: 10pt;
}

#game_info {
  margin-right: 10px;
  font-size: 11pt;
}

#game_info a {
  text-decoration: none;
}

.branch {
  margin-bottom: 10px;
  line-height: 27px;
}

.node_link {
  margin-right: 5px;
  text-decoration: none;
  padding:2px;
}

.node_link.active {
  background-color: #eaeaea;
}

.node_link.first_son {
  font-weight: bold;
}

.red {
  color: red;
}

.blue {
  color: blue;
}

img.move {
}

img.move:hover {
 cursor: pointer;  
}

